test label mapping

--- a/Test2Class.ipynb
+++ b/Test2Class.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,207 +63,104 @@
    "source": [
     "#### Step 1: READ Dataset \n",
     "\n",
-    "- read only S1R1 - S1R10\n",
-    "- rename label from 'elbow flexion' to 'S1R1_elbow flexion' for easy to concat"
+    "- read all subjects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = 'G:\\\\KMUTT\\\\Y3_Term2\\\\Studio_OpenTopic\\\\StudioV_opentopics\\\\Dataset_used'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected 'except' or 'finally' block (1732560627.py, line 38)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[48], line 38\u001b[1;36m\u001b[0m\n\u001b[1;33m    X_all = np.stack(all_X, axis=0)\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected 'except' or 'finally' block\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects = [1, 2, 3, 4, 5, 6]  # ใช้ทุกคน\n",
+    "\n",
+    "# Label mapping สำหรับ elbow flexion และ extension\n",
+    "label_map = {\n",
+    "    'elbow flexion': 0,\n",
+    "    'elbow extension': 1\n",
+    "}\n",
+    "\n",
+    "# Helper สำหรับเรียง run\n",
+    "def extract_run_num(name):\n",
+    "    match = re.search(r'R(\\d+)', name)\n",
+    "    return int(match.group(1)) if match else 0\n",
+    "\n",
+    "# เตรียมเก็บข้อมูลทั้งหมด\n",
+    "all_X = []\n",
+    "all_y = []\n",
+    "\n",
+    "# Loop ทุก subject และทุก run\n",
+    "for subject in subjects:\n",
+    "    for file_name in sorted(os.listdir(folder_path), key=extract_run_num):\n",
+    "        if file_name.startswith(f\"S{subject}R\") and file_name.endswith(\".set\"):\n",
+    "            path = os.path.join(folder_path, file_name)\n",
+    "            print(f\"Reading {file_name}...\")\n",
+    "\n",
+    "            try:\n",
+    "                epochs = mne.io.read_epochs_eeglab(path, verbose='ERROR')\n",
+    "                id_to_name = {v: k for k, v in epochs.event_id.items()}\n",
+    "\n",
+    "                for i, eid in enumerate(epochs.events[:, 2]):\n",
+    "                    full_name = id_to_name[eid]\n",
+    "                    action = full_name.split('_')[-1]\n",
+    "                    if action in label_map:\n",
+    "                        signal = epochs.get_data()[i]\n",
+    "                        all_X.append(signal)\n",
+    "                        all_y.append(label_map[action])\n",
+    "\n",
+    "# แปลงให้เป็น numpy array\n",
+    "X_all = np.stack(all_X, axis=0)\n",
+    "y_all = np.array(all_y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "DataFolder = 'G:\\\\KMUTT\\\\Y3_Term2\\\\Studio_OpenTopic\\\\StudioV_opentopics\\\\Dataset_used'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R1.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R2.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R3.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R4.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R5.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R6.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R7.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R8.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R9.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Extracting parameters from G:\\KMUTT\\Y3_Term2\\Studio_OpenTopic\\StudioV_opentopics\\Dataset_used\\S6R10.set...\n",
-      "Not setting metadata\n",
-      "180 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "Ready.\n",
-      "Not setting metadata\n",
-      "1800 matching events found\n",
-      "No baseline correction applied\n",
-      "Total epochs: 1800\n"
+      "✅ รวมข้อมูลเสร็จแล้ว:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_all' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✅ รวมข้อมูลเสร็จแล้ว:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🧠 Shape of EEG:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mX_all\u001b[49m\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🏷️ Shape of labels:\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_all\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🔢 Label counts:\u001b[39m\u001b[38;5;124m\"\u001b[39m, np\u001b[38;5;241m.\u001b[39mbincount(y_all))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_all' is not defined"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# Merge all files into 1 dataset\n",
-    "EpochList = []\n",
-    "all_event_names = set() #Check event name\n",
-    "\n",
-    "# Sorted R1-R10 and Read files\n",
-    "def extract_run_num(name):\n",
-    "    match = re.search(r'R(\\d+)', name)\n",
-    "    return int(match.group(1)) if match else 0\n",
-    "\n",
-    "for file_name in sorted(os.listdir(DataFolder), key=extract_run_num):\n",
-    "    if file_name.startswith(\"S6R\") and file_name.endswith(\".set\"):\n",
-    "        files_all = os.path.join(DataFolder, file_name)\n",
-    "        # print(f\"Reading {file_name} ...\")\n",
-    "        # print(files_all)\n",
-    "        \n",
-    "        # read files\n",
-    "        epochs = mne.io.read_epochs_eeglab(files_all)\n",
-    "        \n",
-    "        # rename event label EX 'shoulder adduction' → 'S1R1_shoulder adduction'\n",
-    "        file_id = file_name.replace('.set', '')\n",
-    "        new_event_id = {f\"{file_id}_{k}\": v for k, v in epochs.event_id.items()}\n",
-    "        epochs.event_id = new_event_id\n",
-    "        \n",
-    "        EpochList.append(epochs)\n",
-    "        \n",
-    "        all_event_names.update(epochs.event_id.keys()) #Check event name\n",
-    "\n",
-    "#Check all combine\n",
-    "combined_epochs = mne.concatenate_epochs(EpochList)\n",
-    "\n",
-    "print(f\"Total epochs: {len(combined_epochs)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'S6R1_elbow flexion': 1,\n",
-       " 'S6R1_shoulder abduction': 2,\n",
-       " 'S6R1_shoulder adduction': 3,\n",
-       " 'S6R1_forearm pronation': 4,\n",
-       " 'S6R1_forearm supination': 5,\n",
-       " 'S6R1_elbow extension': 6,\n",
-       " 'S6R2_forearm supination': 1,\n",
-       " 'S6R2_shoulder adduction': 2,\n",
-       " 'S6R2_elbow flexion': 3,\n",
-       " 'S6R2_forearm pronation': 4,\n",
-       " 'S6R2_elbow extension': 5,\n",
-       " 'S6R2_shoulder abduction': 6,\n",
-       " 'S6R3_forearm supination': 1,\n",
-       " 'S6R3_elbow extension': 2,\n",
-       " 'S6R3_forearm pronation': 3,\n",
-       " 'S6R3_elbow flexion': 4,\n",
-       " 'S6R3_shoulder abduction': 5,\n",
-       " 'S6R3_shoulder adduction': 6,\n",
-       " 'S6R4_shoulder adduction': 1,\n",
-       " 'S6R4_elbow flexion': 2,\n",
-       " 'S6R4_shoulder abduction': 3,\n",
-       " 'S6R4_elbow extension': 4,\n",
-       " 'S6R4_forearm supination': 5,\n",
-       " 'S6R4_forearm pronation': 6,\n",
-       " 'S6R5_elbow extension': 1,\n",
-       " 'S6R5_shoulder adduction': 2,\n",
-       " 'S6R5_shoulder abduction': 3,\n",
-       " 'S6R5_forearm pronation': 4,\n",
-       " 'S6R5_forearm supination': 5,\n",
-       " 'S6R5_elbow flexion': 6,\n",
-       " 'S6R6_shoulder abduction': 1,\n",
-       " 'S6R6_elbow extension': 2,\n",
-       " 'S6R6_forearm pronation': 3,\n",
-       " 'S6R6_elbow flexion': 4,\n",
-       " 'S6R6_shoulder adduction': 5,\n",
-       " 'S6R6_forearm supination': 6,\n",
-       " 'S6R7_shoulder abduction': 1,\n",
-       " 'S6R7_elbow flexion': 2,\n",
-       " 'S6R7_shoulder adduction': 3,\n",
-       " 'S6R7_elbow extension': 4,\n",
-       " 'S6R7_forearm pronation': 5,\n",
-       " 'S6R7_forearm supination': 6,\n",
-       " 'S6R8_shoulder abduction': 1,\n",
-       " 'S6R8_forearm pronation': 2,\n",
-       " 'S6R8_elbow flexion': 3,\n",
-       " 'S6R8_forearm supination': 4,\n",
-       " 'S6R8_elbow extension': 5,\n",
-       " 'S6R8_shoulder adduction': 6,\n",
-       " 'S6R9_forearm pronation': 1,\n",
-       " 'S6R9_elbow flexion': 2,\n",
-       " 'S6R9_shoulder adduction': 3,\n",
-       " 'S6R9_forearm supination': 4,\n",
-       " 'S6R9_shoulder abduction': 5,\n",
-       " 'S6R9_elbow extension': 6,\n",
-       " 'S6R10_forearm pronation': 1,\n",
-       " 'S6R10_forearm supination': 2,\n",
-       " 'S6R10_shoulder adduction': 3,\n",
-       " 'S6R10_elbow flexion': 4,\n",
-       " 'S6R10_shoulder abduction': 5,\n",
-       " 'S6R10_elbow extension': 6}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_epochs.event_id"
+    "# แสดงผล\n",
+    "print(\"รวมข้อมูล S1–S6 เสร็จแล้ว:\")\n",
+    "print(\"Shape of EEG:\", X_all.shape)\n",
+    "print(\"Shape of labels:\", y_all.shape)\n",
+    "print(\"Label counts (0=flexion, 1=extension):\", np.bincount(y_all))"
    ]
   }
  ],
